--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <input type="password" id="admin-password" required placeholder="Enter Admin Password">
                     </div>
                     <button type="submit">Login</button>
-                    <p class="small-note">Note: Uses Firebase Auth (admin@seapark.blocke.com)</p>
+                    <p class="small-note">Note: Uses Firebase Auth (your admin email)</p>
                 </form>
             </div>
 
