--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <!-- App Scripts -->
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
+    <script src="js/models.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
