Implement BILL-2: Bill History View (List, Edit, Delete)

--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                         </fieldset>
                     </form>
                     <hr>
+                    <section id="bill-history-section">
+                        <h3>Bill History</h3>
+                        <table id="bill-history-table">
+                            <thead>
+                                <tr>
+                                    <th>Month</th>
+                                    <th>Year</th>
+                                    <th>Amount (RM)</th>
+                                    <th>Issue Date</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Bill rows will be dynamically inserted here -->
+                            </tbody>
+                        </table>
+                        <span id="bill-history-status" class="small-note"></span>
+                    </section>
                     <p>Select an action below (Pending Implementation in PAY-1)</p>
                     <div class="admin-actions">
                         <button disabled>Record Payment</button>
