Implement PAY-2: Receipt Link Input

--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
                                 <label for="payment-ref">Reference/Note (Optional):</label>
                                 <input type="text" id="payment-ref" placeholder="e.g. Oct Contribution">
                             </div>
-                             <!-- Receipt link place holder for PAY-2 -->
+                            <div class="form-group">
+                                <label for="payment-receipt">Receipt Link (Optional):</label>
+                                <input type="url" id="payment-receipt" placeholder="e.g. https://drive.google.com/...">
+                            </div>
                             <button type="submit">Record Payment</button>
                             <span id="payment-form-status" class="small-note"></span>
                         </fieldset>
