Implement DASH-1: Dashboard Layout & Data Fetching (Stats Grid)

--- a/index.html
+++ b/index.html
@@ -21,9 +21,33 @@
         <!-- Public Dashboard Section -->
         <section id="dashboard" class="view-section">
             <h2>Public Dashboard</h2>
+            
+            <div id="stats-overview" class="stats-grid">
+                <div class="stat-card">
+                    <h3>Global Break-Even</h3>
+                    <p id="stat-total-bills" class="stat-value">Loading...</p>
+                    <span class="stat-label">Total Bills to Date</span>
+                </div>
+                <div class="stat-card">
+                    <h3>Target Per Unit</h3>
+                    <p id="stat-unit-target" class="stat-value">Loading...</p>
+                    <span class="stat-label">Share (1/44)</span>
+                </div>
+                <div class="stat-card">
+                    <h3>Total Collected</h3>
+                    <p id="stat-total-collected" class="stat-value">Loading...</p>
+                    <span class="stat-label">From 44 Units</span>
+                </div>
+                <div class="stat-card">
+                    <h3>Status</h3>
+                    <p id="stat-status" class="stat-value">Loading...</p>
+                    <span class="stat-label">Deficit / Surplus</span>
+                </div>
+            </div>
+
             <div id="chart-container">
                 <!-- Chart will be rendered here -->
-                <p>Loading data...</p>
+                <p>Loading chart...</p>
             </div>
         </section>
 
