--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <!-- App Scripts -->
     <script src="js/config.js"></script>
     <script src="js/db.js"></script>
