--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
 
             <div id="chart-container">
-                <!-- Chart will be rendered here -->
-                <p>Loading chart...</p>
+                <p id="chart-loading-msg">Loading chart...</p>
+                <canvas id="unit-bar-chart"></canvas>
             </div>
         </section>
 
