Enhance chart visibility: add horizontal scroll and show all unit labels

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
             <div id="chart-container">
                 <p id="chart-loading-msg">Loading chart...</p>
-                <canvas id="unit-bar-chart"></canvas>
+                <div class="chart-scroll-wrapper">
+                    <canvas id="unit-bar-chart"></canvas>
+                </div>
             </div>
         </section>
 
