--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                 </div>
             </div>
 
+            <div id="chart-controls" style="text-align: center; margin-bottom: 10px;">
+                <label>Filter by Floor: </label>
+                <button class="floor-btn active" data-floor="all">All</button>
+                <button class="floor-btn" data-floor="1">Level 1</button>
+                <button class="floor-btn" data-floor="2">Level 2</button>
+                <button class="floor-btn" data-floor="3">Level 3</button>
+                <button class="floor-btn" data-floor="4">Level 4</button>
+            </div>
+
             <div id="chart-container">
                 <p id="chart-loading-msg">Loading chart...</p>
                 <div class="chart-scroll-wrapper">
