--- a/index.html
+++ b/index.html
@@ -128,20 +128,22 @@
                     <hr>
                     <section id="bill-history-section">
                         <h3>Bill History</h3>
-                        <table id="bill-history-table">
-                            <thead>
-                                <tr>
-                                    <th>Month</th>
-                                    <th>Year</th>
-                                    <th>Amount (RM)</th>
-                                    <th>Issue Date</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Bill rows will be dynamically inserted here -->
-                            </tbody>
-                        </table>
+                        <div class="table-wrapper">
+                            <table id="bill-history-table">
+                                <thead>
+                                    <tr>
+                                        <th>Month</th>
+                                        <th>Year</th>
+                                        <th>Amount (RM)</th>
+                                        <th>Issue Date</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Bill rows will be dynamically inserted here -->
+                                </tbody>
+                            </table>
+                        </div>
                         <span id="bill-history-status" class="small-note"></span>
                     </section>
                     <p id="payment-placeholder" style="display:none;">Select an action below (Pending Implementation in PAY-1)</p>
@@ -190,19 +192,21 @@
                                 <!-- populated by JS -->
                             </select>
                         </div>
-                        <table id="payment-history-table">
-                            <thead>
-                                <tr>
-                                    <th>Date</th>
-                                    <th>Amount (RM)</th>
-                                    <th>Reference</th>
-                                    <th>Receipt</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr><td colspan="4">Select a unit to view history.</td></tr>
-                            </tbody>
-                        </table>
+                        <div class="table-wrapper">
+                            <table id="payment-history-table">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Amount (RM)</th>
+                                        <th>Reference</th>
+                                        <th>Receipt</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr><td colspan="4">Select a unit to view history.</td></tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </section>
                 </div>
             </div>
