--- a/index.html
+++ b/index.html
@@ -208,6 +208,33 @@
                             </table>
                         </div>
                     </section>
+
+                    <hr>
+                    <section id="unit-management-section">
+                        <h3>Unit Status Management</h3>
+                        <form id="unit-status-form" class="admin-form">
+                            <fieldset>
+                                <legend>Edit Unit Status</legend>
+                                <div class="form-group">
+                                    <label for="admin-unit-select">Select Unit:</label>
+                                    <select id="admin-unit-select" required>
+                                        <option value="">--Select Unit--</option>
+                                        <!-- populated by JS -->
+                                    </select>
+                                </div>
+                                <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
+                                    <input type="checkbox" id="unit-highlight-check" style="width: auto;"> 
+                                    <label for="unit-highlight-check" style="margin: 0; display: inline;">Highlight Unit (Special Status)</label>
+                                </div>
+                                <div class="form-group">
+                                    <label for="unit-note-input">Public Note:</label>
+                                    <input type="text" id="unit-note-input" placeholder="e.g. Hardship Exemption">
+                                </div>
+                                <button type="submit">Update Unit Status</button>
+                                <span id="unit-status-form-status" class="small-note"></span>
+                            </fieldset>
+                        </form>
+                    </section>
                 </div>
             </div>
         </section>
