--- a/index.html
+++ b/index.html
@@ -235,6 +235,30 @@
                             </fieldset>
                         </form>
                     </section>
+
+                    <hr>
+                    <section id="system-config-section">
+                        <h3>System Configuration</h3>
+                        <form id="threshold-form" class="admin-form">
+                            <fieldset>
+                                <legend>Manual Threshold Override</legend>
+                                <p class="small-note">Overrides the auto-calculated break-even target per unit.</p>
+                                
+                                <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
+                                    <input type="checkbox" id="threshold-override-check" style="width: auto;"> 
+                                    <label for="threshold-override-check" style="margin: 0; display: inline;">Enable Manual Override</label>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="threshold-amount">Manual Target Amount (RM):</label>
+                                    <input type="number" id="threshold-amount" min="0" step="0.01" placeholder="e.g. 100.00" disabled>
+                                </div>
+
+                                <button type="submit">Save Threshold Settings</button>
+                                <span id="threshold-form-status" class="small-note"></span>
+                            </fieldset>
+                        </form>
+                    </section>
                 </div>
             </div>
         </section>
