﻿feat(ADM-3): Implement Data Export
- Added Data Backup section to Admin UI in index.html
- Implemented JSON export logic for Bills, Payments, Units, and Stats in js/app.js
- Updated MasterPlan and DESIGN docs

---
**Current System Capabilities:**
- Core Infrastructure & Auth (Available)
- Bill Management: Create, Read, Update, Delete, Auto-Calc (Available)
- Payment Recording & History (Available)
- Dashboard Visualization: Global Stats, Unit Bar Chart, Threshold Line (Available)
- Admin: Unit Status Mgmt, Manual Threshold, Data Export (Available)

--- a/index.html
+++ b/index.html
@@ -259,6 +259,19 @@
                             </fieldset>
                         </form>
                     </section>
+
+                    <hr>
+                    <section id="data-export-section">
+                        <h3>Data Backup</h3>
+                        <div class="admin-form">
+                            <fieldset>
+                                <legend>Export System Data</legend>
+                                <p class="small-note">Download a copy of all Bills and Payments.</p>
+                                <button id="export-data-btn" type="button" style="background-color: #28a745;">Download Data (JSON)</button>
+                                <span id="export-status" class="small-note"></span>
+                            </fieldset>
+                        </div>
+                    </section>
                 </div>
             </div>
         </section>
