FIX: Resolved duplicate ID conflict between Dashboard Round Widget and Admin Form.
The public dashboard widget reused IDs (round-title, round-remarks, etc.) which conflicted with the Admin Collection Round form. This caused 'undefined' data errors when valid form fields were shadowed by the widget elements. Renamed widget IDs to be unique.

---
**Current System Capabilities:**
- Core Infrastructure & Auth (Available)
- Bill Management: Record, History, Auto-Calc (Available)
- Payment Management: Record, Receipt Upload, History (Available)
- Public Payment Submission & Proxy Upload (Available)
- Payment Archive & Removal (Available)
- Dashboard: Stats, Charts, Threshold Line, Highlighted Units (Available)
- Admin: Unit Status, Manual Override, Data Export (Available)
- Collection Rounds: Definition & Public Visualization (Available)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <button id="round-history-btn" class="text-btn">View History</button>
                 </div>
                 <div class="round-content">
-                    <h4 id="round-title" style="margin-top: 0; color: #0078d7;">Loading...</h4>
+                    <h4 id="widget-round-title" style="margin-top: 0; color: #0078d7;">Loading...</h4>
                     
                     <div class="round-metrics">
                         <div class="metric-item">
@@ -73,8 +73,8 @@
                         <span id="round-percent">0%</span>
                     </div>
 
-                    <p id="round-remarks" class="round-remarks"></p>
-                    <p class="small-note">Includes payments since <span id="round-start-date">-</span> from participating units.</p>
+                    <p id="widget-round-remarks" class="round-remarks"></p>
+                    <p class="small-note">Includes payments since <span id="widget-round-start-date">-</span> from participating units.</p>
                 </div>
 
                 <!-- History Container (Hidden by default) -->
